[gd_scene load_steps=8 format=3 uid="uid://cbtdcsxopxttv"]

[ext_resource type="Texture2D" uid="uid://dq3fteo23wpdg" path="res://art/icons/laundry_icon_wash.png" id="1_1nfob"]
[ext_resource type="Script" uid="uid://ck2wwl6nafcrh" path="res://tags.gd" id="1_i41jd"]
[ext_resource type="Texture2D" uid="uid://c8dptsxx88emv" path="res://art/icons/laundry_icon_iron.png" id="2_07856"]
[ext_resource type="Texture2D" uid="uid://dar6quq64ekd5" path="res://art/icons/laundry_icon_dry.png" id="3_2q1o5"]
[ext_resource type="Texture2D" uid="uid://d1arnxvvqm1vb" path="res://art/icons/laundry_icon_wash_full.png" id="5_tt3ui"]
[ext_resource type="Texture2D" uid="uid://dqdw2tdbga11k" path="res://art/icons/laundry_icon_dry_full.png" id="6_e32rg"]
[ext_resource type="Texture2D" uid="uid://bjbqy6j0tanv7" path="res://art/icons/laundry_icon_iron_full.png" id="7_i0un5"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_i41jd")

[node name="LaundryIconWash" type="Sprite2D" parent="."]
position = Vector2(19.7141, 19.769)
scale = Vector2(0.283616, 0.2776)
texture = ExtResource("1_1nfob")

[node name="LaundryIconDry" type="Sprite2D" parent="."]
position = Vector2(58.4283, 19.1391)
scale = Vector2(0.28782, 0.281714)
texture = ExtResource("3_2q1o5")

[node name="LaundryIconIron" type="Sprite2D" parent="."]
position = Vector2(95.9283, 19.6465)
scale = Vector2(0.295172, 0.288911)
texture = ExtResource("2_07856")

[node name="LaundryIconWash2" type="Sprite2D" parent="."]
position = Vector2(19.7141, 19.769)
scale = Vector2(0.283616, 0.2776)
texture = ExtResource("5_tt3ui")

[node name="LaundryIconDry2" type="Sprite2D" parent="."]
position = Vector2(58.4283, 19.1391)
scale = Vector2(0.28782, 0.281714)
texture = ExtResource("6_e32rg")

[node name="LaundryIconIron2" type="Sprite2D" parent="."]
position = Vector2(95.9283, 19.6465)
scale = Vector2(0.295172, 0.288911)
texture = ExtResource("7_i0un5")
